# ROLL

./: .gitignore  pyproject.toml
roll/distributed/strategy/: deepspeed_strategy.py  vllm_strategy.py
roll/models/: model_providers.py
roll/pipeline/rlvr/: actor_worker.py  rlvr_pipeline.py  utils.py
roll/pipeline/rlvr/rewards/: math_rule_reward_worker.py
roll/utils/: constants.py  functionals.py
roll/utils/metrics/: metrics_manager.py
